--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -86,6 +86,21 @@
             <artifactId>unfiltered-filter_2.12</artifactId>
             <version>0.9.0-beta2</version>
         </dependency>
+        <dependency>
+            <groupId>io.circe</groupId>
+            <artifactId>circe-core_2.12</artifactId>
+            <version>0.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.circe</groupId>
+            <artifactId>circe-generic_2.12</artifactId>
+            <version>0.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.circe</groupId>
+            <artifactId>circe-parser_2.12</artifactId>
+            <version>0.6.1</version>
+        </dependency>
 
         <!-- test -->
         <dependency>
