--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -59,6 +59,44 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- build Elm -->
+<!--
+            <plugin>
+                <groupId>nl.stil4m</groupId>
+                <artifactId>elm-maven-plugin</artifactId>
+                <version>1.0.5</version>
+                <executions>
+                    <execution>
+                        <id>Make Elm Source</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>make</goal>
+                        </goals>
+                        <configuration>
+                            <inputFile>src/main/elm/App.elm</inputFile>
+                            <outputFile>generated/main.js</outputFile>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+-->
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.5.0</version>
+                <configuration>
+                    <executable>java</executable>
+                    <arguments>
+                        <argument>-classpath</argument>
+                        <!-- automatically creates the classpath using all project dependencies,
+                             also adding the project build directory -->
+                        <classpath/>
+                        <argument>Hello</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -111,4 +149,11 @@
         </dependency>
     </dependencies>
 
+    <pluginRepositories>
+        <pluginRepository>
+            <id>stil4m-releases</id>
+            <name>stil4m-releases</name>
+            <url>https://github.com/stil4m/maven-repository/raw/master/releases/</url>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
